--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -1,46 +1,16 @@
-#dong{
-    color: white;
-    text-align: center;
-    font-size: 50px;
+h4{
+    background-image: url("/WebContent/img/place303su.jpg");
 }
+
 #pla{
     font-family:궁서;
     color: violet;
+    background-image: url("/WebContent/img/place303su.jpg");
 }
 body {
-    background-image: url('#');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-}
-.lb-wrap {
-    width: 50%;
-    margin: 10px auto;
-    border: 1px solid #000000;
-    position: relative;}
-.lb-wrap img {
-    width: 100%;
-    vertical-align: middle;
-}
-.lb-text {
-    padding: 10px 20px;
-    border-radius: 10px;
-    text-align: center;
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.container {
-    width: 70%;
-    height: 200px;
-    overflow: hidden;
-}
-.container img {
-    max-width: 100%;
-    height: auto;
-    display: block;
 }
 p{
     color: white;
@@ -48,6 +18,7 @@ p{
     font-size: 40px;
 }
 #navbar {
+    
     overflow: hidden;
     background-color: #ffffff;
   }
