--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -69,4 +69,38 @@ body {
     padding-top: 60px;
   }
 
+
+.graph{
+  width:100%; 
+  height: 300px; 
+  border-bottom: 1px solid #ccc;
+  border-left: 1px solid #ccc;
+  position:relative;
+}
+.graph-bar{
+  display: inline-block;
+  position: absolute;
+  width: 30px; 
+  bottom:0; 
+  perspective:200px;
+  background: #f49842;box-shadow: 1px -1px #d88a41, 
+  2px -2px #d88a41, 
+    3px -3px #d88a41,   
+    4px -4px #d88a41, 
+    5px -5px #d88a41, 
+    6px -6px #d88a41, 
+    7px -7px   #d88a41, 
+    8px -8px #d88a41, 
+    9px -9px #d88a41, 
+    10px -10px #d88a41;
+}
+
+  .left-box {
+    float: left;
+    width: 50%;
+  }
+  .right-box {
+    float: right;
+    width: 48%;
+  }
   
