--- a/WebContent/shop/shop.css
+++ b/WebContent/shop/shop.css
@@ -89,7 +89,7 @@ li{ list-style-type: none;
 	text-align: center;
 }
 
-a {
+.wrap a {
 	-webkit-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
 	-moz-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
 	-ms-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
