--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -5,7 +5,13 @@
 *{
 	font-family: 'Nanum Gothic Coding', monospace;
 }
-
+html {
+height: 100%;
+}
+body {
+margin: 0;
+height: 100%;
+}
 .headImg {
   position:relative;
 }
@@ -97,5 +103,35 @@ body {
     width: 48%;
   }
   
+  
+  .footer {
+  width: 100%;
+  height: 90px;
+  bottom: 0px;
+  border-top: 1px solid #c4c4c4;
+  padding-top: 15px;
+  padding-left: 30px;
+  color: #808080;
+  font-size: 11px;
+}
+
+footer a {
+  display: inline-block;
+  margin: 0 20px 10px 20px;
+  color: #808080; font-size: 11px;
+}
+
+footer a:visited {
+  color: #808080;
+}
+
+footer p {
+  margin-top: 0; margin-bottom: 0;   
+}
+
+footer p span {
+  display: inline-block;
+  margin-left: 20px;
+}
 
   
