--- a/WebContent/shop/shop.css
+++ b/WebContent/shop/shop.css
@@ -114,3 +114,13 @@ a.button:hover {
 	box-shadow: rgba(160, 233, 255, 0.7) 0 0px 0px 40px inset;
   font-size: 20px;
 }
+  .footer {
+  width: 100%;
+  height: 90px;
+  bottom: 0px;
+  border-top: 1px solid #c4c4c4;
+  padding-top: 15px;
+  padding-left: 30px;
+  color: #808080;
+  font-size: 11px;
+}
